--- a/snippet/home-snippet.html
+++ b/snippet/home-snippet.html
@@ -1,29 +1,41 @@
 <div class="jumbotron">
-	<img src="images/jumbotron_768.jpg" class="img-responsive visible-xs">
+  <img src="images/jumbotron_768.jpg" class="img-responsive visible-xs" />
 </div>
 <div class="row">
-	<section class="col-md-4 col-sm-6 col-xs-12">
-		<a href="#" onclick="dc.loadCategory()">
-			<div id="menu-section">
-				<span class="text-center">MENU</span>
-			</div>
-		</a>
-	</section>
+  <section class="col-md-4 col-sm-6 col-xs-12">
+    <a href="#" onclick="dc.loadCategory()">
+      <div id="menu-section">
+        <span class="text-center">MENU</span>
+      </div>
+    </a>
+  </section>
 
-	<section class="col-md-4 col-sm-6 col-xs-12">
-		<a href="#" onclick="dc.loadMenuItem('SP');">
-			<div id="special-section">
-				<span class="text-center">SPECIALS</span>
-			</div>
-		</a>
-	</section>
+  <section class="col-md-4 col-sm-6 col-xs-12">
+    <a href="#" onclick="dc.loadMenuItem('SP');">
+      <div id="special-section">
+        <span class="text-center">SPECIALS</span>
+      </div>
+    </a>
+  </section>
 
-	<section  class="col-md-4 col-sm-12 col-xs-12">
-		<a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50429.22567679116!2d144.92390678285452!3d-37.817530242285166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d348e72eb4f%3A0x7559343cae5e5a9!2sMarket%20Lane%20Coffee!5e0!3m2!1sen!2sau!4v1601870147223!5m2!1sen!2sau" target="_blank">
-			<div id="map-section">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50429.22567679116!2d144.92390678285452!3d-37.817530242285166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d348e72eb4f%3A0x7559343cae5e5a9!2sMarket%20Lane%20Coffee!5e0!3m2!1sen!2sau!4v1601870476715!5m2!1sen!2sau" width="800" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-				<span class="text-center">MAP</span>
-			</div>
-		</a>
-	</section>
+  <section class="col-md-4 col-sm-12 col-xs-12">
+    <a
+      href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.6752464053484!2d-76.71387678489982!3d39.36359027950142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid%20Chu&#39;s%20China%20Bistro!5e0!3m2!1sen!2sau!4v1613451892006!5m2!1sen!2sau"
+      target="_blank"
+    >
+      <div id="map-section">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.6752464053484!2d-76.71387678489982!3d39.36359027950142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid%20Chu&#39;s%20China%20Bistro!5e0!3m2!1sen!2sau!4v1613451892006!5m2!1sen!2sau"
+          width="600"
+          height="450"
+          frameborder="0"
+          style="border: 0"
+          allowfullscreen=""
+          aria-hidden="false"
+          tabindex="0"
+        ></iframe>
+        <span class="text-center">MAP</span>
+      </div>
+    </a>
+  </section>
 </div>
